--- a/index.html
+++ b/index.html
@@ -1,12 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Студія</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <!-- Шапка сайту -->
+    <header>
+      <nav>
+        <a href="/"> WebStudio </a>
+        <ul>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+      <!-- Герой -->
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <!-- Особливості -->
+      <section>
+        <h2 hidden>Особливості</h2>
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Чим ми займаємося-->
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img1.jpg"
+              alt="зображення програмыста працюючого за комп'ютером"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="Зображення програміста працюючого з мобільним телефоном"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img3.jpg"
+              alt="Зображення програміста працюючого на планшеті"
+              width="370"
+            />
+          </li>
+        </ul>
+      </section>
+      <!--Наша команда-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/Ihor-Demianenko.jpg"
+              alt="Ігор Дем'яненко"
+              width="270"
+            />
+            <h3>Ігор Дем'яненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/Olha-Riepina.jpg"
+              alt="Ольга Рєпіна"
+              width="270"
+            />
+            <h3>Ольга Рєпіна</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/Mykola-Tarasov.jpg"
+              alt="Микола Тарасов"
+              width="270"
+            />
+            <h3>Микола Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Mykhailo-Yermakov.jpg"
+              alt="Михайло Єрмаков"
+              width="270"
+            />
+            <h3>Михайло Єрмаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!-- Футер -->
+    <footer>
+      <a href="/"> WebStudio </a>
+      <address>
+        <ul>
+          <li>м. Київ, пр-т Лесі Українки, 26</li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
