--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <ul>
           <li>
             <img
-              src="./images/Ihor-Demianenko.jpg"
+              src="./images/ihor-demianenko.jpg"
               alt="Ігор Дем'яненко"
               width="270"
             />
@@ -103,7 +103,7 @@
           </li>
           <li>
             <img
-              src="./images/Olha-Riepina.jpg"
+              src="./images/olha-riepina.jpg"
               alt="Ольга Рєпіна"
               width="270"
             />
@@ -112,7 +112,7 @@
           </li>
           <li>
             <img
-              src="./images/Mykola-Tarasov.jpg"
+              src="./images/mykola-tarasov.jpg"
               alt="Микола Тарасов"
               width="270"
             />
@@ -121,7 +121,7 @@
           </li>
           <li>
             <img
-              src="./images/Mykhailo-Yermakov.jpg"
+              src="./images/mykhailo-yermakov.jpg"
               alt="Михайло Єрмаков"
               width="270"
             />
@@ -136,7 +136,8 @@
       <a href="/"> WebStudio </a>
       <address>
         <ul>
-          <li>м. Київ, пр-т Лесі Українки, 26</li>
+          <li><a href="https://goo.gl/maps/tT6efvYxBYDT4iRb8" target="_blank" 
+                 rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
